# Curator-Bot

./: bot.json  brain.py  intents.json  main.py  pyproject.toml  user.json
